--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
+  "name": "cba85/heroku-dotenv",
+  "description": "Copy php `.env` variables to or from Heroku environment variables",
+  "homepage": "https://github.com/cba85/heroku-dotenv",
+  "license": "MIT",
   "autoload": {
     "psr-4": {
       "App\\": "src/"
     }
   },
   "require": {
+    "php": ">=7.3",
     "symfony/console": "^5.2"
   }
 }
